Only flush currently selected redis connection