@@ -10,15 +10,18 @@
 package com.nosto.redis.queue;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
+import org.junit.Before;
 import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
 import com.nosto.redis.RedisClusterConnector;
+import com.nosto.redis.RedisConnector;
 import com.nosto.redis.SingleNodeRedisConnector;
 
 /**
@@ -27,23 +30,30 @@ import com.nosto.redis.SingleNodeRedisConnector;
 @RunWith(Parameterized.class)
 public abstract class AbstractScriptTest {
     @ClassRule
-    @Rule
     public static RedisClusterConnector jedisCluster = new RedisClusterConnector();
 
     @ClassRule
-    @Rule
     public static SingleNodeRedisConnector singleJedis = new SingleNodeRedisConnector();
-
-    @Parameterized.Parameter(1)
-    public AbstractScript script;
 
     @Parameterized.Parameter
     public String parameterName;
 
+    @Parameterized.Parameter(1)
+    public RedisConnector redisConnector;
+
+    @Parameterized.Parameter(2)
+    public AbstractScript script;
+
+
     @Parameterized.Parameters(name = "{0}")
     public static Collection<Object[]> scripts() throws IOException {
-        return List.of(new Object[][] {
-                { "single", new SingleNodeScript(singleJedis.getJedis()) },
-                { "cluster", new ClusterScript(jedisCluster.getJedisCluster(), 12)}});
+        return Arrays.asList(new Object[][] {
+                {"single", singleJedis, new SingleNodeScript(singleJedis.getJedis())},
+                {"cluster", jedisCluster, new ClusterScript(jedisCluster.getJedisCluster(), 12)}});
+    }
+
+    @Before
+    public void setUp() {
+        redisConnector.flush();
     }
 }
